Fix the API using the last version of the contract
